--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,82 @@
-body {
-    background-color: bisque;
+.home {
+    background-image: url(/images/background.png);
+}
+
+/*Navigation CSS*/
+.inlineBlock {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.logo {
+    width: 23%;
+    padding: 1%;
+}
+
+nav {
+    width: 72%;
+    padding: 1%;
+}
+
+ul {
+    width: 50%;
+    margin-left: auto;
+}
+
+li {
+    font-family: 'hannoregular';
+    font-size: 24px;
+}
+
+.logo {
+    height: 45px;
+    text-align: center;
+}
+
+.heroImg {
+    display: inline-flex;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 24px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: -112px;
+}
+
+.welcome {
+    display: flex;
+    align-items: center;
+    gap: -237px;
+}
+
+button {}
+
+footer {
+    background-color: #373738;
+}
+
+h1 {
+    font-family: 'digibopregular';
+    color: #FFF1CE;
+    -webkit-text-stroke-width: 16;
+    -webkit-text-stroke-color: #A82162;
+    font-size: 128px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 10.24px;
+}
+
+h2 {
+    font-family: 'hannoregular';
+    color: #480123;
+    text-align: center;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
